# ogssim2

./: Makefile  OGSSim.7  README.md
env/: config.xml  hardware.xml  hdd-hitachi-A7K1000.xml  hdd-seagate-st500.xml  mram-everspin-2018.xml  mram-everspin-32Mb-512b.xml  ssd-transcend-370.xml  ssd-transcend-370s.xml
gui/: OGSSGui.pro  edition.cpp  edition.h  edition.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simulation.cpp  simulation.h  simulation.ui  templateelement.cpp  templateelement.h  templateitemdelegate.cpp  templateitemdelegate.h  templateitemmodel.cpp  templateitemmodel.h  templateparser.cpp  templateparser.h  visualization.cpp  visualization.h  visualization.ui
gui/cfg/: guiConfig.xml  template-config.xml  template-hardware.xml  template-hdd.xml  template-nvram.xml  template-ssd.xml
include/: config.h  config.h.in
include/communication/: communicationinterface.hpp  communicationinterfaceizmq.hpp  communicationinterfacempi.hpp  communicationinterfacezmq.hpp  communicationmanager.hpp  communicationmanagerizmq.hpp  communicationmanagermpi.hpp  communicationmanagerzmq.hpp
include/computation/: comphdd.hpp  compinterface.hpp  compnvram.hpp  compssd.hpp  computationmodel.hpp
include/controller/: decraidvolctrl.hpp  devicecontroller.hpp  hddctrl.hpp  jbodvolctrl.hpp  perfparityctrl.hpp  raid01volctrl.hpp  raid1volctrl.hpp  raidnpdatdecvolctrl.hpp  raidnpnodecvolctrl.hpp  raidnppardecvolctrl.hpp  ssdctrl.hpp  volumecontroller.hpp
include/driver/: devicedriver.hpp  volumedriver.hpp
include/graph/: gendeviceprofile.hpp  gendevicethroughput.hpp  genreqcompletion.hpp  genresponsetime.hpp  genwaitingtime.hpp  graphgeneration.hpp
include/module/: evaluation.hpp  eventextractor.hpp  execution.hpp  hardwareextractor.hpp  module.hpp  (+3 more)
ogmdsim/: Makefile  OGMDSim.7  README.md
ogmdsim/src/: CMakeLists.txt  Makefile  computer.cpp  locator.cpp  main.cpp  maintenance.cpp  outtrace.cpp  rawextract.cpp  scorecomputation.cpp  system.cpp  utils.cpp  xmlextract.cpp
src/: CMakeLists.txt  main.cpp
src/communication/: communicationinterfaceizmq.cpp  communicationinterfacempi.cpp  communicationinterfacezmq.cpp  communicationmanager.cpp  communicationmanagerizmq.cpp  communicationmanagermpi.cpp  communicationmanagerzmq.cpp
src/computation/: comphdd.cpp  compinterface.cpp  compnvram.cpp  compssd.cpp
src/controller/: decraidvolctrl.cpp  hddctrl.cpp  jbodvolctrl.cpp  perfparityctrl.cpp  raid01volctrl.cpp  raid1volctrl.cpp  raidnpdatdecvolctrl.cpp  raidnpnodecvolctrl.cpp  raidnppardecvolctrl.cpp  ssdctrl.cpp  volumecontroller.cpp
src/controller/maintenance/: maintenanceinterface.cpp
src/controller/utest/: utdatdecp0.cpp  utdatdecp1.cpp  utdatdecp2.cpp  utdecraid.cpp  utnodecp0.cpp  utnodecp1.cpp  utnodecp2.cpp  utpardecp0.cpp  utpardecp1.cpp  utpardecp2.cpp  utraid1.cpp
src/driver/: devicedriver.cpp  volumedriver.cpp
src/graph/: gendeviceprofile.cpp  gendevicethroughput.cpp  genreqcompletion.cpp  genresponsetime.cpp  genwaitingtime.cpp  mplinterface.py
src/module/: evaluation.cpp  eventextractor.cpp  execution.cpp  hardwareextractor.cpp  module.cpp  ogss.sublime-workspace  preprocessing.cpp  synchronization.cpp  workloadextractor.cpp
src/parser/: rawparser.cpp  txmlparser-base.cpp  txmlparser-conf.cpp  txmlparser-dev.cpp  txmlparser-hard.cpp  xmlextract.cpp  xxmlparser-base.cpp  xxmlparser-conf.cpp  xxmlparser-dev.cpp  xxmlparser-hard.cpp
src/scheme/: decraidscheme.cpp  sd2sscheme.cpp
src/serializer/: ltxserializer.cpp  mplibserializer.cpp  resume.cpp  txmlserializer.cpp  xxmlserializer.cpp
src/structure/: hardware.cpp  request.cpp
src/synchronization/: syncdefv2.cpp  syncdefv4otf.cpp  synchronizationmodel.cpp  syncsingledisk.cpp
src/synchronization/utest/: utsyncdefv2.cpp
src/util/: chrono.cpp  launcher.cpp  math.cpp  unitarytest.cpp  wrapper.cpp
(+47 files in other folders)
